src/solution/sigmaott-authen-gateway/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-authen-gateway
spec:
  type: ClusterIP
  ports:
  - name: rest
    port: 80
    protocol: TCP
