src/solution/sigmaott-authen-gateway/base/ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-authen-gateway
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      name: prometheus-via-gateway
      match: PathPrefix(`/prometheus`)
      services:
        - kind: Service
          name: access-prometheus
          namespace: cattle-prometheus
          port: 80
          strategy: RoundRobin
      middlewares:
      - name: api-authen-gateway-stripprefix-prometheus
    - kind: Rule
      name: api-gateway-cms
      match: PathPrefix(`/cms`)
      services:
        - kind: Service
          name: api-authen-gateway
          port: 80
          strategy: RoundRobin
      middlewares:
      - name: api-authen-gateway-stripprefix-cms
      - name: api-authen-gateway-cors
